# Duck_App_CLI_Application

./: README.md
duck_app/: CMakeLists.txt
duck_app/src/ro/ubb/duck_app/: main.cpp
duck_app/src/ro/ubb/duck_app/domain/: Duck.cpp  Duck.h  Lane.cpp  Lane.h  Validators.cpp  Validators.h  validators.h
duck_app/src/ro/ubb/duck_app/repository/: FileRepository.cpp  FileRepository.h  Repository.cpp  Repository.h
duck_app/src/ro/ubb/duck_app/service/: DuckService.cpp  DuckService.h  LaneService.cpp  LaneService.h  ReportsService.cpp  ReportsService.h
duck_app/src/ro/ubb/duck_app/ui/: Console.cpp  Console.h
duck_app/tests/: CMakeLists.txt  test_all.cpp
